cluster/apps/monitoring/influxdata/chronograf-middleware.yaml
# chronograf-middleware-headers

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chronograf-middleware-headers
  namespace: monitoring
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
    # stsSeconds: 63072000
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      - "https://chronograf.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"
    customFrameOptionsValue: SAMEORIGIN
