cluster/apps/monitoring/influxdata/chonograf-ingressroute.yaml
# chronograf-local-ingressroute
# chronograf-http-ingressroute
# chronograf-https-ingressroute
# chronograf-middleware-headers

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chronograf-local-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`chronograf.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: influxdata-chronograf-chronograf
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chronograf-http-ingressroute
  namespace: influxdata
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`chronograf.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: https-redirect-scheme-middleware
          namespace: traefik
      services:
        - name: influxdata-chronograf-chronograf
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chronograf-https-ingressroute
  namespace: influxdata
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chronograf.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: authelia-middleware
          namespace: authentication
        - name: chronograf-middleware-headers
      services:
        - name: influxdata-chronograf-chronograf
          port: 80
  tls:
    secretName: chronograf-letsencrypt-production-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chronograf-middleware-headers
  namespace: influxdata
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
    # stsSeconds: 63072000
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      - "https://chronograf.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"
    customFrameOptionsValue: SAMEORIGIN
