cluster/apps/monitoring/influxdata/chronograf-ingressroute.yaml
# chronograf-local-ingressroute
# chronograf-http-ingressroute
# chronograf-https-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chronograf-local-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`chronograf.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: monitoring-chronograf-chronograf
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chronograf-http-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`chronograf.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: https-redirect-scheme-middleware
          namespace: traefik
      services:
        - name: monitoring-chronograf-chronograf
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chronograf-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chronograf.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: authelia-middleware
          namespace: authentication
        - name: secure-headers-middleware
          namespace: traefik
      services:
        - name: monitoring-chronograf-chronograf
          namespace: monitoring
          port: 80
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
