cluster/apps/monitoring/influxdata/influxdb-ingressroute.yaml
# influxdb-tcp-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: influxdb-tcp-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: HostSNI(`*`)
      kind: Rule
      services:
        - name: monitoring-influxdb
          port: 8086
